--- a/src/pages/edit-entry/edit-entry.html
+++ b/src/pages/edit-entry/edit-entry.html
@@ -1,18 +1,36 @@
-<!--
-  Generated template for the EditEntryPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>edit-entry</ion-title>
+    <ion-title>Edit Entry</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <form #f="ngForm" (ngSubmit)="onAddItem(f)">
+    <ion-list>
+      <ion-item>
+        <ion-label floating>Entry Title</ion-label>
+        <ion-input type="text" name="title" [(ngModel)]="title" required></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Date</ion-label>
+        <ion-datetime displayFormat="DDDD, MMMM D, YYYY" pickerFormat="MMM D YYYY" name="date" [(ngModel)]="date" required></ion-datetime>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Mood</ion-label>
+        <ion-select name="mood" [(ngModel)]="mood" required>
+          <ion-option *ngFor="let g of moods" [value]="g">{{ g }}</ion-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label floating>Description</ion-label>
+        <ion-textarea name="description" [(ngModel)]="desc" required></ion-textarea>
+      </ion-item>
+    </ion-list>
+  <button ion-button block text-center type="submit" color="secondary" [disabled]="!f.valid">Save</button>
+  </form>
 
 </ion-content>
