--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,18 +1,21 @@
-<!--
-  Generated template for the SettingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>settings</ion-title>
+    <ion-title>Settings</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-label>Alt Background Color</ion-label>
+      </ion-col>
+      <ion-col>
+        <ion-toggle (ionChange)="onToggle($event)" [checked]="checkAltBackground()"></ion-toggle>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
