--- a/src/pages/view-entry/view-entry.html
+++ b/src/pages/view-entry/view-entry.html
@@ -1,18 +1,14 @@
-<!--
-  Generated template for the ViewEntryPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>view-entry</ion-title>
+    <ion-title>{{ title }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <h1>{{ date }}</h1>
+  <h1>A {{ mood }} day</h1>
+  <p style="text-size: 130%;">{{ desc }}</p>
 </ion-content>
